--- a/src/component/header.css
+++ b/src/component/header.css
@@ -1,7 +1,23 @@
 div{
-    width: 90%;
+    width: 70%;
+    height: 90vh;
     margin: 0 auto;
 }
 img{
-    width: 200px;
+    width: 100px;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid white; */
+    /* border-bottom: 1px solid white; */
+    box-shadow: 0 3px 18px 0px #a1a1a18f;
+    padding: 10px 30px;
+}
+
+header ul{
+    list-style: none;
+    display: flex;
+    gap: 20px;
 }
