--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,9 +1,10 @@
 nav {
-    min-width: 100vw;
+    width: 100vw;
     height: 80px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 2.9825618267059326px 7.456404209136963px rgba(0, 0, 0, 0.10);
     display: flex;
+    /* overflow-x: hidden; */
 }
 
 nav img {
