--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
+  width: 90vw;
+  overflow-x: hidden;
   /* min-height: 100vh;   */
 }
 
